--- a/get-results.ipynb
+++ b/get-results.ipynb
@@ -817,11 +817,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>juventus-tottenham</th>\n",
-       "      <td>tottenham</td>\n",
+       "      <td>juventus</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>juventus (2-5) tottenham</td>\n",
+       "      <td>juventus (4-3) tottenham</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>madrid-psg</th>\n",
@@ -1021,7 +1021,7 @@
        "2018   first basel-city                     city  False  False  False   \n",
        "             bayern-besiktas              bayern  False  False  False   \n",
        "             chelsea-barcelona         barcelona  False  False  False   \n",
-       "             juventus-tottenham        tottenham  False  False  False   \n",
+       "             juventus-tottenham         juventus  False  False  False   \n",
        "             madrid-psg                   madrid  False  False  False   \n",
        "             porto-liverpool           liverpool  False  False  False   \n",
        "             sevilla-united              sevilla  False  False  False   \n",
@@ -1085,7 +1085,7 @@
        "2018   first basel-city                                                basel (2-5) city  \n",
        "             bayern-besiktas                                      bayern (8-1) besiktas  \n",
        "             chelsea-barcelona                                  chelsea (1-4) barcelona  \n",
-       "             juventus-tottenham                                juventus (2-5) tottenham  \n",
+       "             juventus-tottenham                                juventus (4-3) tottenham  \n",
        "             madrid-psg                                                madrid (5-2) psg  \n",
        "             porto-liverpool                                      porto (0-5) liverpool  \n",
        "             sevilla-united                                        sevilla (2-1) united  \n",
@@ -1136,21 +1136,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
