--- a/make-data.ipynb
+++ b/make-data.ipynb
@@ -326,7 +326,7 @@
       "tie         961 non-null object\n",
       "game        961 non-null object\n",
       "minute      936 non-null object\n",
-      "away        366 non-null object\n",
+      "away        368 non-null object\n",
       "extra       12 non-null object\n",
       "shootout    7 non-null object\n",
       "note        0 non-null object\n",
@@ -475,7 +475,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -637,7 +639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "awaymindiff = {\n",
+    "    i[0]:i[1] for i in\n",
+    "    zip(\n",
+    "        list(range(1,218)),\n",
+    "        list(range(0,92))+list(range(91,-1,-1))+list(range(31,-1,-1))+[0]\n",
+    "    )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,20 +687,22 @@
     "    \n",
     "    minutes['t1goals'] = minutes['t1goal'].cumsum()\n",
     "    minutes['t2goals'] = minutes['t2goal'].cumsum()\n",
-    "    minutes['t1goal_diff'] = minutes['t1goals'] - minutes['t2goals']\n",
+    "    minutes['t1goaldiff'] = minutes['t1goals'] - minutes['t2goals']\n",
     "    \n",
     "    minutes['t1awaygoals'] = minutes['t1awaygoal'].cumsum()\n",
     "    minutes['t2awaygoals'] = minutes['t2awaygoal'].cumsum()\n",
-    "    minutes['t1awaygoal_diff'] = minutes['t1awaygoals'] - minutes['t2awaygoals']\n",
+    "    minutes['t1awaygoaldiff'] = minutes['t1awaygoals'] - minutes['t2awaygoals']\n",
     "    \n",
     "    minutes['t1home'] = (minutes.made_minute <= 92).astype(int)\n",
+    "    \n",
+    "    minutes['t1awaymindiff'] = minutes.made_minute.apply(lambda x: awaymindiff[x])\n",
     "    \n",
     "    return minutes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {
     "scrolled": false
    },
@@ -739,12 +758,13 @@
        "      <th>t1awaygoal</th>\n",
        "      <th>t2awaygoal</th>\n",
        "      <th>t1goals</th>\n",
-       "      <th>t2goals</th>\n",
-       "      <th>t1goal_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>t1goaldiff</th>\n",
        "      <th>t1awaygoals</th>\n",
        "      <th>t2awaygoals</th>\n",
-       "      <th>t1awaygoal_diff</th>\n",
+       "      <th>t1awaygoaldiff</th>\n",
        "      <th>t1home</th>\n",
+       "      <th>t1awaymindiff</th>\n",
        "      <th>t1</th>\n",
        "      <th>t2</th>\n",
        "      <th>winner</th>\n",
@@ -764,12 +784,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>arsenal</td>\n",
        "      <td>milan</td>\n",
        "      <td>arsenal</td>\n",
@@ -787,11 +808,12 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>arsenal</td>\n",
        "      <td>milan</td>\n",
@@ -810,12 +832,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>arsenal</td>\n",
        "      <td>milan</td>\n",
        "      <td>arsenal</td>\n",
@@ -833,12 +856,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>arsenal</td>\n",
        "      <td>milan</td>\n",
        "      <td>arsenal</td>\n",
@@ -856,12 +880,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>arsenal</td>\n",
        "      <td>milan</td>\n",
        "      <td>arsenal</td>\n",
@@ -869,6 +894,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -879,22 +905,24 @@
        "3   2008  first  arsenal-milan          4.0  NaN   False   False       False   \n",
        "4   2008  first  arsenal-milan          5.0  NaN   False   False       False   \n",
        "\n",
-       "   t2awaygoal  t1goals  t2goals  t1goal_diff  t1awaygoals  t2awaygoals  \\\n",
-       "0       False        0        0            0            0            0   \n",
-       "1       False        0        0            0            0            0   \n",
-       "2       False        0        0            0            0            0   \n",
-       "3       False        0        0            0            0            0   \n",
-       "4       False        0        0            0            0            0   \n",
+       "   t2awaygoal  t1goals  ...  t1goaldiff  t1awaygoals  t2awaygoals  \\\n",
+       "0       False        0  ...           0            0            0   \n",
+       "1       False        0  ...           0            0            0   \n",
+       "2       False        0  ...           0            0            0   \n",
+       "3       False        0  ...           0            0            0   \n",
+       "4       False        0  ...           0            0            0   \n",
        "\n",
-       "   t1awaygoal_diff  t1home       t1     t2   winner  t1win  \n",
-       "0                0       1  arsenal  milan  arsenal      1  \n",
-       "1                0       1  arsenal  milan  arsenal      1  \n",
-       "2                0       1  arsenal  milan  arsenal      1  \n",
-       "3                0       1  arsenal  milan  arsenal      1  \n",
-       "4                0       1  arsenal  milan  arsenal      1  "
+       "   t1awaygoaldiff  t1home  t1awaymindiff       t1     t2   winner t1win  \n",
+       "0               0       1              0  arsenal  milan  arsenal     1  \n",
+       "1               0       1              1  arsenal  milan  arsenal     1  \n",
+       "2               0       1              2  arsenal  milan  arsenal     1  \n",
+       "3               0       1              3  arsenal  milan  arsenal     1  \n",
+       "4               0       1              4  arsenal  milan  arsenal     1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -939,12 +967,13 @@
        "      <th>t1awaygoal</th>\n",
        "      <th>t2awaygoal</th>\n",
        "      <th>t1goals</th>\n",
-       "      <th>t2goals</th>\n",
-       "      <th>t1goal_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>t1goaldiff</th>\n",
        "      <th>t1awaygoals</th>\n",
        "      <th>t2awaygoals</th>\n",
-       "      <th>t1awaygoal_diff</th>\n",
+       "      <th>t1awaygoaldiff</th>\n",
        "      <th>t1home</th>\n",
+       "      <th>t1awaymindiff</th>\n",
        "      <th>t1</th>\n",
        "      <th>t2</th>\n",
        "      <th>winner</th>\n",
@@ -964,12 +993,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>united</td>\n",
        "      <td>psg</td>\n",
        "      <td>united</td>\n",
@@ -987,12 +1017,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>united</td>\n",
        "      <td>psg</td>\n",
        "      <td>united</td>\n",
@@ -1010,12 +1041,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>united</td>\n",
        "      <td>psg</td>\n",
        "      <td>united</td>\n",
@@ -1033,12 +1065,13 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>united</td>\n",
        "      <td>psg</td>\n",
        "      <td>united</td>\n",
@@ -1056,11 +1089,12 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>united</td>\n",
        "      <td>psg</td>\n",
@@ -1069,6 +1103,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1079,22 +1114,24 @@
        "30239   2019  first  united-psg        183.0  NaN   False   False       False   \n",
        "30240   2019  first  united-psg        184.0    a    True   False        True   \n",
        "\n",
-       "       t2awaygoal  t1goals  t2goals  t1goal_diff  t1awaygoals  t2awaygoals  \\\n",
-       "30236       False        2        3           -1            2            2   \n",
-       "30237       False        2        3           -1            2            2   \n",
-       "30238       False        2        3           -1            2            2   \n",
-       "30239       False        2        3           -1            2            2   \n",
-       "30240       False        3        3            0            3            2   \n",
+       "       t2awaygoal  t1goals  ...  t1goaldiff  t1awaygoals  t2awaygoals  \\\n",
+       "30236       False        2  ...          -1            2            2   \n",
+       "30237       False        2  ...          -1            2            2   \n",
+       "30238       False        2  ...          -1            2            2   \n",
+       "30239       False        2  ...          -1            2            2   \n",
+       "30240       False        3  ...           0            3            2   \n",
        "\n",
-       "       t1awaygoal_diff  t1home      t1   t2  winner  t1win  \n",
-       "30236                0       0  united  psg  united      1  \n",
-       "30237                0       0  united  psg  united      1  \n",
-       "30238                0       0  united  psg  united      1  \n",
-       "30239                0       0  united  psg  united      1  \n",
-       "30240                1       0  united  psg  united      1  "
+       "       t1awaygoaldiff  t1home  t1awaymindiff      t1   t2  winner t1win  \n",
+       "30236               0       0              4  united  psg  united     1  \n",
+       "30237               0       0              3  united  psg  united     1  \n",
+       "30238               0       0              2  united  psg  united     1  \n",
+       "30239               0       0              1  united  psg  united     1  \n",
+       "30240               1       0              0  united  psg  united     1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
