--- a/modeling.Rmd
+++ b/modeling.Rmd
@@ -21,41 +21,109 @@ tail(matrix)
 ```
 
 ```{r}
-model.simple = locfit(t1win ~ made_minute + t1goaldiff + t1awaygoaldiff, data = matrix, family = 'binomial')
-```
-
-
-```{r}
-rhs = lp(matrix$made_minute, matrix$t1goaldiff, matrix$t1awaygoaldiff,
-         matrix$homewing1, matrix$awaywing1, matrix$homewing2, matrix$awaywing2)
-
-model.odds = locfit.raw(
-  x = rhs,
-  y = matrix$t1win,
+model.simple = locfit(
+  t1win ~ made_minute + t1goaldiff + t1awaygoaldiff,
+  data = matrix,
   family = 'binomial'
 )
 ```
 
 ```{r}
-matrix = matrix %>% 
+model.odds = locfit(
+  t1win ~ made_minute + t1goaldiff + t1awaygoaldiff + 
+    homewing1 + homewing2 + stoppagetime,
+  data = matrix,
+  family = 'binomial'
+)
+```
+
+```{r}
+# rhs = lp(matrix$made_minute, matrix$t1goaldiff, matrix$t1awaygoaldiff,
+#          matrix$homewing1, matrix$awaywing1, matrix$homewing2, matrix$awaywing2)
+# 
+# model.odds = locfit.raw(
+#   x = rhs,
+#   y = matrix$t1win,
+#   family = 'binomial'
+# )
+```
+
+```{r}
+winprob = matrix %>% 
   mutate(
-    winprob = predict(model.simple, newdata = ., type = "response")
+    neutral = predict(model.simple, newdata = ., type = "response"),
+    odds = predict(model.odds, newdata = ., type = "response")
+  ) %>% 
+  select(season, round, tie, t1win, made_minute, neutral, odds) %>% 
+  mutate(
+    errorN = t1win - neutral,
+    errorO = t1win - odds,
+    sqrErrorN = errorN^2, 
+    sqrErrorO = errorO^2
   )
 ```
 
 
 ```{r}
-y = 2019
-r = 'first'
-t = 'united-psg'
+errors = winprob %>% 
+  group_by(made_minute) %>% 
+  summarise(
+    count = n(),
+    rtmeanSqrErrorN = sqrt(mean(sqrErrorN)),
+    rtmeanSqrErrorO = sqrt(mean(sqrErrorO))
+  ) %>%
+  mutate(diffError = rtmeanSqrErrorN - rtmeanSqrErrorO)
 
-matrix %>% 
+errors %>% 
+  select(-count, -diffError) %>% 
+  gather(key = errorType, value = rtMeanSqrError, rtmeanSqrErrorN, rtmeanSqrErrorO) %>% 
+  ggplot() +
+  geom_line(aes(x = made_minute, y = rtMeanSqrError, color = errorType))
+```
+
+```{r}
+proberror = winprob %>% 
+  select(made_minute, odds, t1win) %>% 
+  mutate(probrange = cut_interval(odds, 20)) %>% 
+  group_by(probrange) %>% 
+  summarise(actualprob = sum(t1win) / n()) %>% 
+  mutate(
+    probcut = as.numeric(
+      str_sub(
+        str_extract(
+          as.character(probrange),
+          ",.*]"
+        ),
+        start = 2,
+        end = -2
+      )
+    )
+  )
+
+proberror %>% 
+  ggplot() +
+  geom_point(aes(probcut, actualprob))
+```
+
+
+
+```{r}
+y = 2017
+r = 'first'
+t = 'psg-barcelona'
+
+winprob %>% 
   filter(season == y) %>% 
   filter(round == r) %>% 
   filter(tie == t) %>% 
-  ggplot(aes(made_minute, winprob)) +
+  gather(key = winprobmodel, value = winprob, neutral, odds) %>% 
+  ggplot(aes(made_minute, winprob, color=winprobmodel)) +
   geom_line() +
   scale_y_continuous(limits = c(0,1)) +
+  scale_x_continuous(
+    breaks = c(0, 46, 92, 138, 184),
+    labels = c('g1 start','g1 half','g2 start','g2 half','end')
+  ) +
   theme_minimal() +
   xlab("Minutes left") +
   ylab("Win probability")
