--- a/modeling.Rmd
+++ b/modeling.Rmd
@@ -31,52 +31,49 @@ model.simple = locfit(
 ```{r}
 model.odds = locfit(
   t1win ~ made_minute + t1goaldiff + t1awaygoaldiff + 
-    homewing1 + homewing2 + stoppagetime,
+    homewing1 + homewing2,
   data = matrix,
   family = 'binomial'
 )
 ```
 
 ```{r}
-# rhs = lp(matrix$made_minute, matrix$t1goaldiff, matrix$t1awaygoaldiff,
-#          matrix$homewing1, matrix$awaywing1, matrix$homewing2, matrix$awaywing2)
-# 
-# model.odds = locfit.raw(
-#   x = rhs,
-#   y = matrix$t1win,
-#   family = 'binomial'
-# )
+model.odds2 = locfit(
+  t1win ~ made_minute + t1goaldiff + t1awaygoaldiff + 
+    awaywing1 + awaywing2,
+  data = matrix,
+  family = 'binomial'
+)
 ```
 
 ```{r}
 winprob = matrix %>% 
   mutate(
     neutral = predict(model.simple, newdata = ., type = "response"),
-    odds = predict(model.odds, newdata = ., type = "response")
+    odds = predict(model.odds, newdata = ., type = "response"),
+    odds2 = predict(model.odds2, newdata = ., type = "response")
   ) %>% 
-  select(season, round, tie, t1win, made_minute, neutral, odds) %>% 
-  mutate(
-    errorN = t1win - neutral,
-    errorO = t1win - odds,
-    sqrErrorN = errorN^2, 
-    sqrErrorO = errorO^2
-  )
+  select(season, round, tie, t1win, made_minute, neutral, odds, odds2)
 ```
 
 
 ```{r}
 errors = winprob %>% 
+  mutate(
+    errorN = t1win - neutral, errorO = t1win - odds, errorO2 = t1win - odds2,
+    sqrErrorN = errorN^2, sqrErrorO = errorO^2, sqrErrorO2 = errorO2^2
+  ) %>% 
   group_by(made_minute) %>% 
   summarise(
     count = n(),
     rtmeanSqrErrorN = sqrt(mean(sqrErrorN)),
-    rtmeanSqrErrorO = sqrt(mean(sqrErrorO))
-  ) %>%
-  mutate(diffError = rtmeanSqrErrorN - rtmeanSqrErrorO)
+    rtmeanSqrErrorO = sqrt(mean(sqrErrorO)),
+    rtmeanSqrErrorO2 = sqrt(mean(sqrErrorO2))
+  )
 
 errors %>% 
-  select(-count, -diffError) %>% 
-  gather(key = errorType, value = rtMeanSqrError, rtmeanSqrErrorN, rtmeanSqrErrorO) %>% 
+  select(-count) %>% 
+  gather(key = errorType, value = rtMeanSqrError, rtmeanSqrErrorN, rtmeanSqrErrorO, rtmeanSqrErrorO2) %>% 
   ggplot() +
   geom_line(aes(x = made_minute, y = rtMeanSqrError, color = errorType))
 ```
@@ -88,21 +85,17 @@ proberror = winprob %>%
   group_by(probrange) %>% 
   summarise(actualprob = sum(t1win) / n()) %>% 
   mutate(
-    probcut = as.numeric(
-      str_sub(
-        str_extract(
-          as.character(probrange),
-          ",.*]"
-        ),
-        start = 2,
-        end = -2
-      )
-    )
+    probcut = probrange %>% 
+      as.character() %>% 
+      str_extract(",.*]") %>% 
+      str_sub(start = 2, end = -2) %>% 
+      as.numeric()
   )
 
 proberror %>% 
   ggplot() +
-  geom_point(aes(probcut, actualprob))
+  geom_point(aes(probcut, actualprob)) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed")
 ```
 
 
@@ -122,7 +115,7 @@ winprob %>%
   scale_y_continuous(limits = c(0,1)) +
   scale_x_continuous(
     breaks = c(0, 46, 92, 138, 184),
-    labels = c('g1 start','g1 half','g2 start','g2 half','end')
+    labels = c('g1 start','g1 half','g1 end\ng2 start','g2 half','end')
   ) +
   theme_minimal() +
   xlab("Minutes left") +
